fix footer alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,5 +4,5 @@
   background-color: $dark;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: $light;
 }
